--- a/app/src/main/res/layout/activity_user_chat.xml
+++ b/app/src/main/res/layout/activity_user_chat.xml
@@ -37,6 +37,14 @@
             android:inputType="text"
             android:maxLines="6"
             tools:ignore="Autofill" />
+
+        <ImageView
+            android:id="@+id/img_share_documents"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/send_document"
+            />
         <Button
             android:id="@+id/btn_send"
             android:layout_width="wrap_content"
