--- a/app/src/main/res/layout/send.xml
+++ b/app/src/main/res/layout/send.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:background="@drawable/round_view"
         android:layout_width="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
@@ -19,6 +20,14 @@
             android:layout_height="wrap_content"
             android:text="Send Message"/>
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/img_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:src="@drawable/user"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
 </RelativeLayout>
